--- a/client/src/app.html
+++ b/client/src/app.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="description" content="" />
-		<link rel="icon" href="%svelte.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%svelte.head%
-	</head>
-	<body>
-		<div id="svelte">%svelte.body%</div>
-	</body>
+<head>
+  <meta charset="utf-8"/>
+  <meta content="" name="description"/>
+  <link href="%svelte.assets%/favicon.png" rel="icon"/>
+  <link href="%svelte.assets%/global.scss" rel="stylesheet"/>
+  <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  %svelte.head%
+</head>
+<body>
+<div id="svelte">%svelte.body%</div>
+</body>
 </html>
