--- a/client/src/app.html
+++ b/client/src/app.html
@@ -6,6 +6,7 @@
   <link href="%svelte.assets%/favicon.png" rel="icon"/>
   <link href="%svelte.assets%/global.scss" rel="stylesheet"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
+  <link rel="stylesheet" href="https://use.typekit.net/gal1lyo.css">
   %svelte.head%
 </head>
 <body>
