💄 input global size

--- a/client/src/app.html
+++ b/client/src/app.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="" name="description"/>
   <link href="%svelte.assets%/favicon.png" rel="icon"/>
-  <link href="%svelte.assets%/global.scss" rel="stylesheet"/>
+  <link href="%svelte.assets%/global.css" rel="stylesheet"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <link rel="stylesheet" href="https://use.typekit.net/gal1lyo.css">
   %svelte.head%
