--- a/client/src/app.html
+++ b/client/src/app.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8"/>
   <meta content="" name="description"/>
-  <link href="%svelte.assets%/favicon.png" rel="icon"/>
-  <link href="%svelte.assets%/global.css" rel="stylesheet"/>
+  <link href="/favicon.svg" rel="icon"/>
+  <link href="/global.css" rel="stylesheet"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
-  <link rel="stylesheet" href="https://use.typekit.net/gal1lyo.css">
+  <link href="https://use.typekit.net/gal1lyo.css" rel="stylesheet">
   %svelte.head%
 </head>
 <body>
